--- a/i18n/en.json
+++ b/i18n/en.json
@@ -4001,5 +4001,6 @@
   "widgets.users_emails_input.loading": "Loading",
   "widgets.users_emails_input.no_user_found_matching": "No one found matching **{text}**, type email address",
   "widgets.users_emails_input.valid_email": "Add **{email}**",
-  "yourcomputer": "Your computer"
+  "yourcomputer": "Your computer",
+  "cpdmobjects": "Data From CPDM"
 }
