--- a/i18n/zh-CN.json
+++ b/i18n/zh-CN.json
@@ -2976,6 +2976,7 @@
   "web.header.logout": "注销",
   "web.root.signup_info": "所有团队的通讯一站式解决，随时随地可访问和搜索",
   "yourcomputer": "您的电脑",
+  "cpdmobjects": "来自CPDM的数据",
   "admin.channel_settings.channel_details.isPublic": "公共频道或私有频道",
   "admin.channel_settings.channel_details.isDefaultDescr": "默认频道无法转换成私有频道。",
   "admin.channel_settings.channel_details.add_group": "添加组",
@@ -3159,7 +3160,7 @@
   "promote_to_user_modal.desc": "此操作将升级游客 {username} 至成员。这将允许用户加入公开频道已经与当前分配的频道里的成员以外的用户进行互动。您确定要升级 {username} 至用户？",
   "postlist.toast.scrollToLatest": "转跳至最新消息",
   "postlist.toast.scrollToBottom": "转跳到最近",
-  "postlist.toast.newMessagesSince": "自从 {date} {time}，有 {count} 条新消息",
+  "postlist.toast.newMessagesSince": "{count, number} new {count, plural, one {message} other {messages}} {isToday, select, true {} other {since}} {date}",
   "postlist.toast.newMessages": "{count} 条新消息",
   "postlist.toast.history": "查看消息历史",
   "post.ariaLabel.replyMessage": "{time} {date}，{authorName}回复到：{message}",
