聊天室样式改造

--- a/i18n/ja.json
+++ b/i18n/ja.json
@@ -1736,7 +1736,7 @@
   "emoji_picker.header": "絵文字選択",
   "emoji_picker.nature": "自然",
   "emoji_picker.objects": "モノ",
-  "emoji_picker.people": "人物",
+  "emoji_picker.people": "用户",
   "emoji_picker.places": "場所",
   "emoji_picker.recent": "最近使用したもの",
   "emoji_picker.search_emoji": "絵文字を検索する",
@@ -3164,7 +3164,7 @@
   "invitation-modal.discard-changes.title": "変更を破棄する",
   "invitation-modal.discard-changes.message": "未送信の招待があります。本当にこれらを破棄しますか?",
   "invitation-modal.discard-changes.button": "破棄する",
-  "invitation-modal.confirm.people-header": "人物",
+  "invitation-modal.confirm.people-header": "用户",
   "invitation-modal.confirm.not-valid-user-or-email": "有効なユーザーもしくは電子メールと一致しません。",
   "invitation-modal.confirm.not-valid-channel": "有効なチャンネル名と一致しません。",
   "invitation-modal.confirm.details-header": "詳細",
