--- a/i18n/zh-TW.json
+++ b/i18n/zh-TW.json
@@ -1736,7 +1736,7 @@
   "emoji_picker.header": "繪文字選取器",
   "emoji_picker.nature": "自然",
   "emoji_picker.objects": "物件",
-  "emoji_picker.people": "人物",
+  "emoji_picker.people": "用户",
   "emoji_picker.places": "地方",
   "emoji_picker.recent": "最近曾使用",
   "emoji_picker.search_emoji": "搜尋繪文字",
@@ -3151,7 +3151,7 @@
   "invitation-modal.discard-changes.title": "放棄變更？",
   "invitation-modal.discard-changes.message": "還有尚未寄送的邀請，確定要放棄它們嘛？",
   "invitation-modal.discard-changes.button": "是，放棄它們",
-  "invitation-modal.confirm.people-header": "人物",
+  "invitation-modal.confirm.people-header": "用户",
   "invitation-modal.confirm.not-valid-user-or-email": "不符合有效的使用者或電子郵件。",
   "invitation-modal.confirm.not-valid-channel": "不符合有效的頻道名稱。",
   "invitation-modal.confirm.details-header": "詳細資料",
