--- a/i18n/zh-CN.json
+++ b/i18n/zh-CN.json
@@ -1738,7 +1738,7 @@
   "emoji_picker.header": "表情选择器",
   "emoji_picker.nature": "自然",
   "emoji_picker.objects": "物品",
-  "emoji_picker.people": "人物",
+  "emoji_picker.people": "用户",
   "emoji_picker.places": "地点",
   "emoji_picker.recent": "最近使用",
   "emoji_picker.search_emoji": "搜索表情符",
@@ -3102,7 +3102,7 @@
   "team_members_dropdown.makeTeamMembers": "设置为团队成员",
   "team_members_dropdown.makeTeamAdmins": "设置为团队管理员",
   "team_members_dropdown.guest": "游客",
-  "team_member_modal.invitePeople": "邀请人物",
+  "team_member_modal.invitePeople": "邀请用户",
   "team_channel_settings.group.group_user_row.numberOfGroups": "{amount, number} 个组",
   "system_notice.body.ie11_deprecation": "您的浏览器，IE11，将今后不再支持。[了解如和轻松转移到其他浏览器](!https://forum.mattermost.org/t/mattermost-is-dropping-support-for-internet-explorer-ie11-in-v5-16/7575)。",
   "suggestion.user.isCurrent": "(您)",
@@ -3237,7 +3237,7 @@
   "invitation-modal.discard-changes.title": "抛弃修改",
   "invitation-modal.discard-changes.message": "你有未寄出的邀请函，您确定你想要放弃它们吗？",
   "invitation-modal.discard-changes.button": "是的，抛弃",
-  "invitation-modal.confirm.people-header": "人物",
+  "invitation-modal.confirm.people-header": "用户",
   "invitation-modal.confirm.not-valid-user-or-email": "未匹配有效的用户或邮箱地址。",
   "invitation-modal.confirm.not-valid-channel": "未匹配有效的讨论组名。",
   "invitation-modal.confirm.details-header": "详情",
@@ -3263,7 +3263,7 @@
   "invitation_modal.invite_members.description-email-disabled": "使用链接请新的团队成员。团队成员可以访问公开团队和公开讨论组中的消息以及文件。",
   "invitation_modal.invite_members.description": "使用链接或邮件邀请新的团队成员。团队成员可以访问公开团队和公开讨论组中的消息以及文件。",
   "invitation_modal.invite_guests.title": "邀请**游客**",
-  "invitation_modal.invite_guests.description": "邀请游客到讨论组。游客只能访问他们属于的讨论组中的消息、文件和人物。",
+  "invitation_modal.invite_guests.description": "邀请游客到讨论组。游客只能访问他们属于的讨论组中的消息、文件和用户。",
   "invitation_modal.guests.users_emails_input.valid_email": "邀请 **{email}** 为游客",
   "invitation_modal.guests.users_emails_input.no_user_found_matching-email-disabled": "未找到任何人匹配**{text}**",
   "invitation_modal.guests.users_emails_input.no_user_found_matching": "未找到匹配 **{text}** 的用户，输入邮箱地址进行邀请",
@@ -3275,7 +3275,7 @@
   "invitation_modal.guests.custom-message.link": "设置自定义消息",
   "invitation_modal.guests.custom-message.description": "给您的邀请创建个自定义消息。",
   "invitation_modal.guests.add-channels.description": "指定游客能访问的讨论组。",
-  "invitation_modal.guests.add_people.title": "邀请人物",
+  "invitation_modal.guests.add_people.title": "邀请用户",
   "invitation_modal.guests.add_people.description-email-disabled": "添加现有的访客。",
   "invitation_modal.guests.add_people.description": "添加现有访客或发送邮件邀请新的访客。",
   "invitation_modal.guests.add_channels.title": "搜索并添加讨论组",
@@ -3458,7 +3458,7 @@
   "navbar_dropdown.marketplace": "插件集市",
   "navbar_dropdown.manageGroups": "管理组",
   "navbar_dropdown.invitePeopleExtraText": "添加或邀请他人到团队",
-  "navbar_dropdown.invitePeople": "邀请人物",
+  "navbar_dropdown.invitePeople": "邀请用户",
   "navbar_dropdown.addGroupsToTeam": "添加组到团队",
   "admin.team_channel_settings.removeConfirmModal.messageChannel": "{amount, number} 位用户将被移除。他们不属于关联到此讨论组的组。您确定要移除这些用户吗？",
   "admin.team_channel_settings.need_groups_channel": "您必须添加至少一个用同步组成员的组管理此团队。",
