--- a/i18n/zh-TW.json
+++ b/i18n/zh-TW.json
@@ -1145,7 +1145,7 @@
   "admin.service.tlsCertFile": "TLS 憑證檔案：",
   "admin.service.tlsCertFileDescription": "TLS 將使用的憑證檔案。",
   "admin.service.tlsKeyFile": "TLS 金鑰檔案：",
-  "admin.service.tlsKeyFileDescription": "TLS 將使用的私有金鑰檔案。",
+  "admin.service.tlsKeyFileDescription": "TLS 將使用的非公開金鑰檔案。",
   "admin.service.useLetsEncrypt": "使用 Let's Encrypt：",
   "admin.service.useLetsEncryptDescription": "啟用自動擷取 Let's Encrypt 的憑證。將會在來自新網域的用戶端嘗試連線時擷取憑證。此功能可以跟多個網域同時運作。",
   "admin.service.useLetsEncryptDescription.disabled": "啟用自動擷取 Let's Encrypt 的憑證。將會在來自新網域的用戶端嘗試連線時擷取憑證。此功能可以跟多個網域同時運作。 除非[將通訊埠 80 導向至 443](!#Forward80To443)被啟用否則無法啟用此功能。",
@@ -3831,8 +3831,8 @@
   "admin.channel_settings.channel_list.managementHeader": "管理",
   "admin.channel_settings.channel_details.syncGroupMembersDescr": "啟用時，從群組新增或移除使用者將會同時從此頻道新增或移除使用者。唯一邀請使用者至此頻道的方式為將他們加入至群組。[詳情請參閱此](!https://www.mattermost.com/pl/default-ldap-group-constrained-team-channel.html)",
   "admin.channel_settings.channel_details.syncGroupMembers": "同步群組成員",
-  "admin.channel_settings.channel_details.isPublicDescr": "`公開`時頻道可被發掘且任何使用者皆能加入，`私有`時需要邀請。切換以轉換公開頻道為私有。啟用群組同步時，不能轉換私有頻道成公開。",
-  "admin.channel_settings.channel_details.isPublic": "公開或私有頻道",
+  "admin.channel_settings.channel_details.isPublicDescr": "`公開`時頻道可被發掘且任何使用者皆能加入，`非公開`時需要邀請。切換以轉換公開頻道為非公開。啟用群組同步時，不能轉換非公開頻道成公開。",
+  "admin.channel_settings.channel_details.isPublic": "公開或非公開頻道",
   "admin.channel_settings.channel_details.isDefaultDescr": "不能將預設頻道轉為私人頻道。",
   "admin.channel_settings.channel_details.add_group": "新增群組",
   "admin.channel_settings.channel_detail.syncedGroupsTitle": "同步群組",
