修改评论中发送文件的密级

--- a/i18n/zh-CN.json
+++ b/i18n/zh-CN.json
@@ -1520,6 +1520,7 @@
   "channel_modal.privateName": "非公开",
   "channel_modal.publicHint": " - 任何人可以加入此讨论组",
   "channel_modal.publicName": "公开",
+  "channel_modal.secret_level": "密级",
   "channel_modal.purpose": "用途",
   "channel_modal.purposeEx": "例如：\"用于提交问题和建议的讨论组\"",
   "channel_modal.type": "类型",
@@ -2078,15 +2079,15 @@
   "integrations.successful": "设置成功",
   "interactive_dialog.submitting": "提交中...",
   "intro_messages.anyMember": " 任何成员可以加入和查看这个讨论组。",
-  "intro_messages.beginning": "{name} 的开端",
-  "intro_messages.creator": "这是{name}讨论组的开端，由{creator}于{date}建立。",
+  "intro_messages.beginning": "欢迎进入「{name}」讨论组",
+  "intro_messages.creator": "这是「{name}」讨论组的开端，由{creator}于{date}建立。",
   "intro_messages.default": "**欢迎来到{display_name}！**\n \n发表您想所有人看到的消息。所有人在加入团队时候自动成员此讨论组的永久成员。",
   "intro_messages.DM": "这是您和{teammate}私信记录的开端。\n此区域外的人不能看到这里共享的私信和文件。",
   "intro_messages.GM": "这是您和{names}团体消息的起端。\n此区域外的人不能看到这里共享的消息和文件。",
   "intro_messages.group_message": "这是您与此团队成员团体记录的开端。在这里的直接消息和文件共享除了在此的人外无法看到。",
   "intro_messages.invite": "邀请其他人到此讨论组",
   "intro_messages.inviteOthers": "邀请其他人入组",
-  "intro_messages.noCreator": "这是{name}讨论组的开端，建立于{date}。",
+  "intro_messages.noCreator": "这是「{name}」讨论组的开端，建立于{date}。",
   "intro_messages.offTopic": "这是{display_name}的开端，一个非工作有关的会话。",
   "intro_messages.onlyInvited": " 只有受邀的成员才能看到此非公开讨论组。",
   "intro_messages.purpose": " 此讨论组的用途为：{purpose}",
