按部门查找用户

--- a/i18n/zh-CN.json
+++ b/i18n/zh-CN.json
@@ -2551,7 +2551,7 @@
   "team_import_tab.importSlack": "从Slack(Beta)导入",
   "team_import_tab.successful": "导入成功：",
   "team_import_tab.summary": "查看汇总",
-  "team_member_modal.members": "{team}成员",
+  "team_member_modal.members": "「{team}」的成员",
   "team_members_dropdown.confirmDemoteDescription": "如果你从系统管理角色降级且没有另一个用户有系统管理员权限，你需要通过一个终端访问Mattermost服务器并运行以下命令来重新指定一个系统管理员。",
   "team_members_dropdown.confirmDemoteRoleTitle": "确认从系统管理角色降级",
   "team_members_dropdown.confirmDemotion": "确认降级",
@@ -3249,7 +3249,7 @@
   "invitation_modal.members.users_emails_input.valid_email": "邀请 **{email}** 为团队成员",
   "invitation_modal.members.users_emails_input.no_user_found_matching-email-disabled": "未找到任何人匹配**{text}**",
   "invitation_modal.members.users_emails_input.no_user_found_matching": "未找到匹配 **{text}** 的用户，输入邮箱地址进行邀请",
-  "invitation_modal.members.title": "邀请**成员**到{teamName}",
+  "invitation_modal.members.title": "邀请**成员**到「{teamName}」",
   "invitation_modal.members.share_link.title": "分享此链接",
   "invitation_modal.members.share_link.link_copied": "链接已复制",
   "invitation_modal.members.share_link.input": "团队邀请链接",
@@ -3260,6 +3260,7 @@
   "invitation_modal.members.search-and-add.description-email-disabled": "添加现有的成员到此团队。",
   "invitation_modal.members.search-and-add.description": "添加现有成员或邮件邀请新的成员。",
   "invitation_modal.members.search_and_add.title": "添加或邀请他人",
+  "invitation_modal.members.dept-filter-enable": "按部门查找人员",
   "invitation_modal.members.or": "或",
   "invitation_modal.members.invite_button": "邀请成员",
   "invitation_modal.invite.more": "邀请更多人",
