1.只能新建非公开讨论组;2.url用uuid代替;3.去掉用途属性;

--- a/i18n/zh-CN.json
+++ b/i18n/zh-CN.json
@@ -1513,7 +1513,8 @@
   "channel_modal.header": "标题",
   "channel_modal.headerEx": "例如：\"[链接标题](http://example.com)\"",
   "channel_modal.headerHelp": "设定在讨论组标题里在讨论组旁边的文字。举例，输入常见链接 [链接标题](http://example.com)。",
-  "channel_modal.modalTitle": "新建通道",
+  "channel_modal.modalTitle": "新建讨论组",
+  "channel_modal.secretLevelError":"必须指定密级",
   "channel_modal.name": "名称",
   "channel_modal.optional": "(可选)",
   "channel_modal.privateHint": " - 只有被邀请的成员可加入此讨论组",
