--- a/i18n/zh-CN.json
+++ b/i18n/zh-CN.json
@@ -1514,7 +1514,7 @@
   "channel_modal.headerEx": "例如：\"[链接标题](http://example.com)\"",
   "channel_modal.headerHelp": "设定在讨论组标题里在讨论组旁边的文字。举例，输入常见链接 [链接标题](http://example.com)。",
   "channel_modal.modalTitle": "新建讨论组",
-  "channel_modal.secretLevelError":"必须指定密级",
+  "channel_modal.secretLevelError": "必须指定密级",
   "channel_modal.name": "名称",
   "channel_modal.optional": "(可选)",
   "channel_modal.privateHint": " - 只有被邀请的成员可加入此讨论组",
@@ -1635,6 +1635,7 @@
   "create_post.send_message": "发送消息",
   "create_post.cancel": "撤销",
   "create_post.can_not_send": "无法发送消息",
+  "create_post.set_secret_level": "发送文件",
   "create_post.secret_level_error": "仍有未指定密级的文件",
   "create_post.shortcutsNotSupported": "您的设备不支持键盘快捷键。",
   "create_post.tutorialTip.title": "发送消息中",
